fix padding et gap content heb

--- a/css/style.css
+++ b/css/style.css
@@ -350,26 +350,34 @@ gap: 15px;
     flex-direction: column;
     justify-content: space-around;
 }
-
+/* Style du contenu des cards heb */
 .heb-content {
-    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 8px;
+    padding: 0 15px 0 15px;
+    gap: 4px;
 }
 
+.heb-txt {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
 .div-heb .card-title {
 
-    margin-top: 10px;
-    margin-bottom: 4px;
+    margin: 0px;
 }
 
 .heb-rating {
 
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
 .div-heb .card-subtitle { 
 
-    margin: 0;
+    margin: 0px;
 }
 
 .card-subtitle {
@@ -618,6 +626,7 @@ footer{
 
     }
 
+    /* ajout du border top witdh à zéro pour éliminer la bordure top et la création d'un décalage au survol */
     .btn-heb, .btn-act {
         border-bottom: 2px solid #f2f2f2;
         border-top-width: 0px;
